--- a/bitnami/laravel-app/values.yaml
+++ b/bitnami/laravel-app/values.yaml
@@ -8,6 +8,8 @@
 #     - myRegistryKeySecretName
 #   storageClass: myStorageClass
 
+# appKey:
+
 phpImage:
   registry: docker.io
   repository: happywork/php-fpm
@@ -45,6 +47,60 @@ nginxImage:
   ## Set to true if you would like to see extra information on logs
   ##
   debug: false
+
+customEnv:
+  APP_NAME: "Laravel"
+  APP_ENV: "local"
+  APP_DEBUG: "true"
+  LOG_CHANNEL: "stack"
+  LOG_LEVEL: "debug"
+  APP_URL: "http://localhost"
+  DB_CONNECTION: "mysql"
+  DB_PORT: "3306"
+  DB_HOST: "127.0.0.1"
+  DB_DATABASE: "database"
+  DB_USERNAME: "username"
+  DB_PASSWORD: "secret"
+  BROADCAST_DRIVER: "log"
+  CACHE_DRIVER: "file"
+  SESSION_DRIVER: "file"
+  SESSION_LIFETIME: "120"
+  QUEUE_DRIVER: "sync"
+  REDIS_HOST: "127.0.0.1"
+  REDIS_PASSWORD: "nul"
+  REDIS_PORT: "6379"
+
+customNginxConf:
+  default.conf: |
+    upstream php-upstream {
+      server localhost:9000;
+    }
+    server {
+      listen 80;
+      server_name localhost;
+      root /var/www/app/public;
+      index index.php index.html index.htm;
+      location / {
+        try_files $uri $uri/ /index.php$is_args$args;
+      }
+      location ~ \.php$ {
+        try_files $uri /index.php =404;
+        fastcgi_pass php-upstream;
+        fastcgi_index index.php;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_read_timeout 600;
+        include fastcgi_params;
+      }
+      location ~ /\.ht {
+        deny all;
+      }
+      location /.well-known/acme-challenge/ {
+        root /var/www/letsencrypt/;
+        log_not_found off;
+      }
+    }
 
 ## Force target Kubernetes version (using Helm capabilites if not set)
 ##
@@ -227,7 +283,7 @@ podSecurityContext:
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container
 ##
 containerSecurityContext:
-  enabled: true
+  enabled: false
   runAsUser: 1001
 
 ## Laravel containers' liveness and readiness probes.
@@ -348,6 +404,10 @@ ingress:
   ## Set this to true in order to add the corresponding annotations for cert-manager
   ##
   certManager: false
+
+  ## Set cert-manager.io/cluster-issuer
+  ##
+  ## certManagerClusterIssuer: letsencrypt-prod
 
   ## Ingress Path type
   ##
@@ -566,33 +626,6 @@ mariadb:
       accessModes:
         - ReadWriteOnce
       size: 8Gi
-
-##
-## External Database Configuration
-##
-## All of these values are only used when mariadb.enabled is set to false
-##
-externalDatabase:
-  ## Database host
-  ##
-  host: localhost
-  ## non-root Username for Laravel Database
-  ##
-  user: happywork
-  ## Database password
-  ##
-  password: ""
-  ## Database name
-  ##
-  database: happywork
-  ## Database port number
-  ##
-  port: 3306
-  ## Use existing secret (ignores previous password)
-  ## must contain key `mariadb-password`
-  ## NOTE: When it's set, the `externalDatabase.password` parameter is ignored
-  ##
-  # existingSecret:
 
 ## The logic of the post-init.d user scripts is that all is all files with extensions .sh, .sql or .php are executed for one time only, at the very first initialization of the pod as the very last step of entrypoint.sh.
 ## Example:
