--- a/bitnami/laravel-app/templates/secrets.yaml
+++ b/bitnami/laravel-app/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "common.names.fullname" . }}
+  name: {{ template "common.names.fullname" . }}-oauth
   labels: {{- include "common.labels.standard" . | nindent 4 }}
     {{- if .Values.commonLabels }}
     {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
@@ -11,14 +11,26 @@ metadata:
   {{- end }}
 type: Opaque
 data:
-  {{- if .Values.appKey }}
-  appKey: {{ .Values.appKey | b64enc | quote }}
-  {{- else }}
-  appKey: {{ randAlphaNum 32 | b64enc | quote }}
-  {{- end }}
   {{- if .Values.oauthPrivateKey }}
   oauth-private.key: {{ .Values.oauthPrivateKey | b64enc | quote }}
   {{- end }}
   {{- if .Values.oauthPublicKey }}
   oauth-public.key: {{ .Values.oauthPublicKey | b64enc | quote }}
   {{- end }}
+---
+{{- if .Values.customSecretEnv }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "common.names.fullname" . }}-env
+  labels: {{- include "common.labels.standard" . | nindent 4 }}
+    {{- if .Values.commonLabels }}
+    {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
+    {{- end }}
+  {{- if .Values.commonAnnotations }}
+  annotations: {{- include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 }}
+  {{- end }}
+type: Opaque
+data:
+{{- include "common.tplvalues.render" (dict "value" .Values.customSecretEnv "context" $) | nindent 2 }}
+{{- end }}
